Initial commit for upgrading maven, gradle confs and eclipse project to java 10. wip: - maven files: multimodule project compiles as java 10 - gradle files: does not compile - eclipse project: waiting for 4.8 to use multimodules as imported images(?)